feat(api) use new golib Library
